--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,14 @@ timezone: America/Los_Angeles
 url: http://media.govalley.org
 cdn: https://d2qybxhkdu1nl.cloudfront.net
 
+defaults:
+    -
+        scope:
+            path: "podcast"
+            type: "posts"
+        values:
+            layout: "podcast"
+            permalink: /podcast/:year/:month/:day/:title.html
+
 prose:
     media: "images"
